Bo sung bai tap

--- a/html/demomenu.html
+++ b/html/demomenu.html
@@ -65,7 +65,7 @@
     </div>
   </body>
   <script>
-    var a =document.getElementsByClassName("menu");
-    console.log(a);
+    // var a =document.getElementsByClassName("menu");
+    // console.log(a);
   </script>
 </html>
